[project]
name = "asset-flow"
version = "0.1.0"
description = "자산조회 포트폴리오 관리 시스템"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-types==0.7.0",
    "certifi==2025.8.3",
    "cffi==2.0.0",
    "charset-normalizer==3.4.3",
    "cryptography==46.0.1",
    "dotenv==0.9.9",
    "gevent==25.9.1",
    "greenlet==3.2.4",
    "idna==3.10",
    "numpy==2.3.3",
    "pandas==2.3.2",
    "playwright>=1.60.0",
    "psycopg2-binary==2.9.11",
    "pycparser==2.23",
    "pydantic==2.11.9",
    "pydantic-core==2.33.2",
    "pyjwt==2.10.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "pytz==2025.2",
    "requests==2.32.5",
    "setuptools==80.9.0",
    "six==1.17.0",
    "sqlalchemy==2.0.43",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.1",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "websocket==0.2.1",
    "zope-event==6.0",
    "zope-interface==8.0",
]
